[gd_scene load_steps=5 format=3 uid="uid://cjvvi1wm1eukc"]

[ext_resource type="Script" path="res://Entities/Managers/BuildingManager/BuildingManager.gd" id="2_666x6"]
[ext_resource type="Texture2D" uid="uid://d3gd0bi7h7swb" path="res://Sprites/Squares/128x128-Build.png" id="2_k5jon"]
[ext_resource type="AudioStream" uid="uid://b0v1gammmkxdu" path="res://Audio/UserInterface/AudioErrorSignal.wav" id="4_jft5a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y2m26"]
size = Vector2(128, 128)

[node name="BuildingManager" type="Node2D"]
script = ExtResource("2_666x6")

[node name="HighlightSquare" type="Sprite2D" parent="."]
texture = ExtResource("2_k5jon")
centered = false

[node name="Area2D" type="Area2D" parent="HighlightSquare"]
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="HighlightSquare/Area2D"]
shape = SubResource("RectangleShape2D_y2m26")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_jft5a")

[connection signal="body_entered" from="HighlightSquare/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="HighlightSquare/Area2D" to="." method="_on_area_2d_body_exited"]
